fix alignment

--- a/_sass/components/page.scss
+++ b/_sass/components/page.scss
@@ -80,7 +80,7 @@ header {
 
     p {
       line-height: 2.5;
-      text-align:  center;
+      text-align:  left;
     }
   }
 
